# webapi/docs/swagger.json
@@ -28,34 +28,6 @@
                 }
             }
         },
-        "/character": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Character"
-                ],
-                "summary": "get character with id",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "character id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
         "/character/create": {
             "post": {
                 "consumes": [
@@ -67,7 +39,7 @@
                 "tags": [
                     "Character"
                 ],
-                "summary": "register user",
+                "summary": "create character",
                 "parameters": [
                     {
                         "description": "character",
@@ -86,7 +58,7 @@
                 }
             }
         },
-        "/character/delete": {
+        "/character/delete/{id}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -97,7 +69,7 @@
                 "tags": [
                     "Character"
                 ],
-                "summary": "register user",
+                "summary": "delete character",
                 "parameters": [
                     {
                         "type": "integer",
@@ -125,7 +97,7 @@
                 "tags": [
                     "Character"
                 ],
-                "summary": "register user",
+                "summary": "update character",
                 "parameters": [
                     {
                         "description": "character",
@@ -135,6 +107,53 @@
                         "schema": {
                             "$ref": "#/definitions/models.UpdateCharacter"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/characters": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Character"
+                ],
+                "summary": "get all user characters",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/character{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Character"
+                ],
+                "summary": "get character with id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "character id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -186,9 +205,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Character"
+                    "Auth"
                 ],
-                "summary": "get all user characters",
+                "summary": "register user",
                 "parameters": [
                     {
                         "description": "user",
@@ -236,6 +255,9 @@
                     "type": "number"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "user": {
                     "type": "string"
                 }
             }
